samples/_failures_safe/1761593741_49af0e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_600830c6.c: In function ‘main’:
./samples/SAFE/__tmp_600830c6.c:185:11: error: expected ‘;’ at end of input
  185 |     printf
      |           ^
      |           ;
./samples/SAFE/__tmp_600830c6.c:185:5: error: expected declaration or statement at end of input
  185 |     printf
      |     ^~~~~~
